2007-02-20  Richard Dale  <rdale@foton.es>

	* Commented out QList<QHostAddress> marshallers as it caused a linking
	  problem on Mac OS X
	* Change 'ADD_LIBRARY (qyoto SHARED ${SRC_CPP})' to 
	  'ADD_LIBRARY (qyoto MODULE ${SRC_CPP})' to build libqyoto.so, rather
	  than libqyoto.dyld on Mac OS X

2007-02-19  Arno Rehn  <arno@arnorehn.de>

	* Implemented adding Q_PROPERTY's to the QMetaObject. Next step is
	  adding classes like InvokeSlot for properties in qyoto.cpp.
	* When retrieving slot signatures, also include the slots of the superclass,
	  if it isn't a native C++ class. Same has to be done for signals.
	* Did some code cleanup:
		* Moved QyotoMetaData class into a seperate file, QyotoMetaData.cs
		* Made code in QyotoMetaData better readable

2007-02-14  Arno Rehn  <arno@arnorehn.de>

	* Fixed compilation error in t14
	* Modified all CMakeLists.txt to produce nicer output

2007-02-14  Richard Dale  <rdale@foton.es>

	* Added cmake files for building the csrcc tool
	* Fix the cmake file for building the uics tool
	* Specify the ${UICS_PATH} and ${CSRCC_PATH} as their relative positions
	  within the qyoto project.

2007-02-13  Richard Dale  <rdale@foton.es>

	* Removed the signal spy check and replaced it with a global flag 
	  'application_terminated'. Once the flag is set, destructors are no
	  longer called.

2007-02-12  Richard Dale  <rdale@foton.es>

	* The scheme for caching the smoke methodId inside a SmokeMethod Attribute
	  didn't work, and the value returned was always -1, even when it had been
	  set to a value. So use a dictionary of type Dictionary<MethodInfo, int>
	  as a cache instead.
	* When a destructor has been called, remove the item from the weak 
	  reference map
	* Additionally, in a destructor free the smokeqyoto_object struct, and
	  set the pointer to it in the C# instance to 0.

2007-02-11  Richard Dale  <rdale@foton.es>

	* Don't call a destructor is the instance was allocated in the C++ world